workshop04/minio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minions
  labels:
    app: minio
    name: minions

---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minions
  labels:
    app: minio
    name: minions
spec:
  clusterIP: None
  selector:
    app: minio
    name: minio-pod
  ports:
  - name: minio-api-port
    port: 9000
    targetPort: 9000
  - name: minio-cons-port
    port: 9090
    targetPort: 9090


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minions
  labels:
    app: minio
    name: minio-sts
spec:
  replicas: 4
  serviceName: minio-hsvc
  selector:
    matchLabels:
      app: minio
      name: minio-pod
  volumeClaimTemplates:
  - metadata:
      name: data-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: do-block-storage
  template:
    metadata:
      name: minio-pod
      namespace: minions
      labels:
        name: minio-pod
        app: minio
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: minio-container
        image: bitnami/minio:2024.8.29
        imagePullPolicy: IfNotPresent
        ports:
        - name: minio-api-port
          containerPort: 9000
        - name: minio-cons-port
          containerPort: 9090
        resources:
          requests:
            cpu: 200m
            memory: 250Mi
          limits:
            cpu: 200m
            memory: 250Mi
        volumeMounts:
        - name: data-vol
          mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minions
spec:
  type: LoadBalancer
  selector: 
    app: minio
    # apps.kubernetes.io/pod-index: "0"
  ports:
  - name: minio-api-port
    port: 9000
    targetPort: 9000
  - name: minio-cons-port
    port: 9090
    targetPort: 9090
