workshop04/minio-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: minions
  labels:
    app: minio
    name: minio-ing
spec:
  ingressClassName: nginx
  rules: 
  - host: console-146.190.201.220.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: minio-svc
            port: 
              number: 9090
  - host: data-146.190.201.220.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: minio-svc
            port: 
              number: 9000
